--- a/pubnub-temp-site/deploy/nginx.pubnub-temp.conf
+++ b/pubnub-temp-site/deploy/nginx.pubnub-temp.conf
@@ -3,12 +3,40 @@ server {
   listen [::]:80;
   server_name impressiveweb.site www.impressiveweb.site;
 
-  root /var/www/pubnub-temp-site;
+  root /var/www/html;
   index index.html;
 
   location / {
     try_files $uri $uri/ =404;
   }
+
+  # Proxy dynamic API endpoints to local Node server
+  location /config {
+    proxy_pass http://127.0.0.1:4999/config;
+    proxy_http_version 1.1;
+    proxy_set_header Upgrade $http_upgrade;
+    proxy_set_header Connection 'upgrade';
+    proxy_set_header Host $host;
+    proxy_cache_bypass $http_upgrade;
+  }
+
+  location /publish {
+    proxy_pass http://127.0.0.1:4999/publish;
+    proxy_http_version 1.1;
+    proxy_set_header Upgrade $http_upgrade;
+    proxy_set_header Connection 'upgrade';
+    proxy_set_header Host $host;
+    proxy_set_header X-Real-IP $remote_addr;
+    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+  }
+
+  location /get-token/ {
+    proxy_pass http://127.0.0.1:4999/get-token/;
+    proxy_http_version 1.1;
+    proxy_set_header Host $host;
+    proxy_set_header X-Real-IP $remote_addr;
+    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+}
 
   # Enable gzip for small static payloads
   gzip on;
