--- a/pubnub-temp-site/package.json
+++ b/pubnub-temp-site/package.json
@@ -4,10 +4,14 @@
   "description": "Minimal site that subscribes to PubNub channel to display temperature and humidity",
   "main": "publish_test.js",
   "scripts": {
-    "publish": "node publish_test.js"
+    "publish": "node publish_test.js",
+    "start": "node server.js"
   },
   "dependencies": {
     "minimist": "^1.2.8",
-    "pubnub": "^5.0.0"
+    "pubnub": "^5.0.0",
+    "express": "^4.18.4",
+    "dotenv": "^16.3.1",
+    "body-parser": "^1.20.2"
   }
 }
